modified front page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
   </head>
   <body>
     <div class="wrapper">
@@ -26,43 +26,49 @@
       </header>
       <section>
         <h1>
-<a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello world</h1>
+          <a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello world</h1>
 
-<p>This blog is dedicated to documenting my progress in becoming a Ruby developer. </p>
+        <p>This blog is dedicated to documenting my progress in becoming a Ruby developer. </p>
 
-<p>Since August of 2015, I've been working my way through programming in general, and Ruby in particular. When I started, I had no experience with coding, and very little experience with the command line interface. Fortunately, I had very good teachers. </p>
+        <p>Since August of 2015, I've been working my way through programming in general, and Ruby in particular. When I started, I had no experience with coding, and very little experience with the command line interface. Fortunately, I had very good teachers. </p>
 
-<h2>
-<a id="topics" class="anchor" href="#topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Topics</h2>
+        <h2>
+          <a id="topics" class="anchor" href="#topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Topics</h2>
 
-<p>I'd like to cover at least some of in the following topics in the short-term...</p>
+        <p>I'd like to cover at least some of in the following topics in the short-term...</p>
 
-<ul>
-<li>Navigating Linux as a newbie</li>
-<li>Markdown</li>
-<li>VIM tricks and tips</li>
-<li>Programming Lessons check-list</li>
-<li>My take on Agile</li>
-<li>Regular Expressions</li>
-<li>Learning it the hard way first</li>
-<li>Learning to code through projects</li>
-<li>Navigating projects with a significant number of objects</li>
-<li>Javascript and JQuery</li>
-<li>HTML and CSS</li>
-<li>What relevant books I've been reading</li>
-<li>Listening my way through the <a href="http://devchat.tv/ruby-rogues/">Ruby Rogues Podcast</a>
-</li>
-<li>Polymorphism and Duck Typing</li>
-<li>Naming classes and methods</li>
-</ul>
+        <ul>
+          <li>Navigating Linux as a newbie</li>
+          <li>Markdown</li>
+          <li>VIM tricks and tips</li>
+          <li>Programming Lessons check-list</li>
+          <li>My take on Agile</li>
+          <li>Regular Expressions</li>
+          <li>Learning it the hard way first</li>
+          <li>Learning to code through projects</li>
+          <li>Navigating projects with a significant number of objects</li>
+          <li>Javascript and JQuery</li>
+          <li>HTML and CSS</li>
+          <li>What relevant books I've been reading</li>
+          <li>Listening my way through the <a href="http://devchat.tv/ruby-rogues/">Ruby Rogues Podcast</a>
+          </li>
+          <li>Polymorphism and Duck Typing</li>
+          <li>Naming classes and methods</li>
+        </ul>
 
-<p>I have no idea what order I'm going to cover these in, and I'll come up with other topics before I get to all of them. That said, I like to write and I have a new interface to play with, so expect fairly robust output for a while.</p>
+        <p>I have no idea what order I'm going to cover these in, and I'll come up with other topics before I get to all of them. That said, I like to write and I have a new interface to play with, so expect fairly robust output for a while.</p>
+
+        <p> Here is a list of current blog posts:</p>
+
+        <ul>
+          <li><a href="../_posts/2015-04-29-lessons.MARKUP">Programming Lessons</a></li>
+        </ul>
       </section>
     </div>
     <footer>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
